# slam-constructor

./: CHANGELOG.rst  CMakeLists.txt  README.md  gmg_smoke_run.launch  package.xml  tiny_smoke_run.launch
config/: tiny_mit.properties  viny_mit.properties  viny_pr2.properties
config/bag_runner/: gmapping_mit.properties  tiny_mit.properties  tiny_slam.properties  tiny_slam_base.properties  viny_mit.properties  viny_pr2.properties  viny_slam.properties  viny_slam_base.properties
config/bag_runner/common/: hill_climbing_scan_matching.properties
config/bag_runner/datasets/: in_mit_stata.properties  in_pr2.properties
config/bag_runner/slams/: gmapping_base.properties  tiny_slam_base.properties  viny_slam_base.properties  viny_slam_experimental.properties
config/common/: bf_m3rsm.properties  hill_climbing_scan_matching.properties  monte_carlo_scan_matching.properties
config/slams/: tiny_mean_cell.properties  tiny_original_cell.properties  tiny_slam_base.properties  viny_slam_base.properties  viny_slam_experimental.properties
launch/: 1h_config_common.launch  1h_config_wg.launch  credibilist_mit_run.launch  gmapping_mit_run.launch  gmapping_wg_pr2_run.launch  gmg_mit_run.launch  gmg_smoke_run.launch  gmg_wg_pr2_bag.launch  gmg_wg_pr2_run.launch  graph_demo_mit.launch  tiny_mit_run.launch  tiny_pr2_run.launch  tiny_smoke_run.launch  viny_mit_run.launch  viny_pr2_run.launch  viny_x_mit_run.launch  viny_x_pr2_run.launch
properties/: viny_slam.properties
rviz/: debug.rviz  wg_pr2.rviz
src/core/: geometry_discrete_primitives.h  geometry_primitives.h  geometry_utils.h  gradient_walker_scan_matcher.h  grid_scan_matcher.h  laser_scan_grid_world.h  many_to_many_multiresolution_scan_matcher.h  math_utils.h  monte_carlo_scan_matcher.h  olson_scan_matcher.h  particle_filter.h  random_utils.h  robot_pose.h  sensor_data.h  serialization.h  slam_fascade.h  state_data.h  trigonometry_utils.h  world.h
src/core/Hough_scan_matcher/: extra_util_functions.h  hough.cpp  hough.h  hough_scan_matcher.cpp  hough_scan_matcher.h  raster.h
src/core/features/: angle_histogram.h
src/core/maps/: area_occupancy_estimator.h  cell_occupancy_estimator.h  const_occupancy_estimator.h  grid_approximator.h  grid_cell.h  grid_cell_factory.h  grid_cell_strategy.h  grid_map.h  grid_map_scan_adders.h  grid_rasterization.h  lazy_layered_grid_map.h  lazy_tiled_grid_map.h  naive_grid_cells.h  occupancy_map.h  plain_grid_map.h  regular_squares_grid.h  rescalable_caching_grid_map.h  tbm_grid_cells.h  transferable_belief_model.h  zoomable_grid_map.h
src/core/scan_matchers/: bf_multi_res_scan_matcher.h  brute_force_scan_matcher.h  connect_the_dots_ambiguous_drift_detector.h  grid_scan_matcher.h  hcsm_fixed.h  hill_climbing_scan_matcher.h  m3rsm_engine.h  many_to_many_multires_scan_matcher.h  monte_carlo_scan_matcher.h  no_action_scan_matcher.h  observation_impact_estimators.h  occupancy_observation_probability.h  pose_enumeration_scan_matcher.h  pose_enumerators.h  weighted_mean_discrepancy_sp_estimator.h  weighted_mean_discrepancy_spe.h  weighted_mean_point_probability_spe.h
src/core/states/: laser_scan_grid_world.h  robot_pose.h  sensor_data.h  single_state_hypothesis_laser_scan_grid_world.h  state_data.h  world.h
src/gmapping/: gmapping.cpp  gmapping_cost_estimator.h  gmapping_fascade.h  gmapping_grid_cell.h  gmapping_particle_filter.h  gmapping_scan_probability_estimator.h  gmapping_world.h  scan_matcher.h
src/ros/: bag_topic_with_transform.h  init_scan_matcher.h  init_utils.h  laser_scan_observer.h  launch_properties_provider.h  lslam2D_bag_runner.cpp  occupancy_grid_publisher.h  path_publisher.cpp  pose_correction_tf_publisher.h  robot_pose_observers.h  robot_pose_tf_publisher.h  rviz_grid_viewer.h  scan_filter.cpp  single_hypoth_slam_node.cpp  topic_with_transform.h  utils.h  wg_pr2_bag_adapter.cpp
src/slam/gmapping/: gmapping.cpp  gmapping_grid_cell.h  gmapping_particle_filter.h  gmapping_world.h
src/slam/tiny/: tiny_grid_cell.h  tiny_world.h
src/slam/viny/: viny_grid_cell.h  viny_scan_matcher.h  viny_scan_probability_estimator.h  viny_slam.cpp  viny_world.h
src/slam/vinyx/: vinyx_hypothesis.h  vinyx_slam.cpp  vinyx_world.h
src/slams/credibilist/: TBM_prob_conversion.h  grid_cell.h  init_slam.h  slam.cpp
src/slams/gmapping/: gmapping.cpp  gmapping_grid_cell.h  gmapping_occupancy_observation_pe.h  gmapping_particle_filter.h  gmapping_scan_probability_estimator.h  gmapping_world.h  init_gmapping.h
src/slams/graph/: graph_demo.cpp  graph_slam_world.h  pose_graph_map.h  rviz_graph_viewer.h
src/slams/tiny/: init_tiny_slam.h  tiny_grid_cell.h  tiny_scan_matcher.h  tiny_slam.cpp  tiny_world.h
src/slams/viny/: TBM_prob_conversion.h  init_viny_slam.h  viny_grid_cell.h  viny_scan_matcher.h  viny_scan_probability_estimator.h  viny_slam.cpp  viny_world.h
src/slams/vinyx/: init_vinyx_slam.h  vinyx_slam.cpp  vinyx_world.h
src/tiny_slam/: tiny_fascade.h  tiny_grid_cell.h  tiny_grid_cells.h  tiny_scan_cost_estimator.h  tiny_scan_matcher.h  tiny_scan_probability_estimator.h  tiny_slam.cpp  tiny_world.h
src/utils/: console_view.h  init_occupancy_mapping.h  init_scan_matching.h  init_slam.h  map_dumpers.h  path_publisher.cpp  pose2D_search_space_evaluator.cpp  properties_providers.h  sm_runner.cpp
src/utils/data_generation/: grid_map_patcher.h  laser_scan_generator.h  map_primitives.h
src/viny_slam/: viny_grid_cell.h  viny_scan_cost_estimator.h  viny_scan_matcher.h  viny_scan_probability_estimator.h  viny_slam.cpp  viny_world.h
test/core/: data_generation_utils.h  directions.h  geometry_discrete_primitives_test.cpp  geometry_utils_test.cpp  light_weight_rectangle_test.cpp  mock_grid_cell.h  sensor_data_test.cpp  trigonometry_utils_test.cpp
test/core/features/: angle_histogram_test.cpp
test/core/maps/: area_occupancy_estimator_test.cpp  grid_common_test.cpp  grid_map_scan_adders_test.cpp  grid_map_test.cpp  grid_rasterization_test.cpp  pow2cached_plain_max_approximator_test.cpp  regular_squares_grid_test.cpp  rescalable_caching_grid_map_test.cpp  unbounded_lazy_tiled_grid_map_test.cpp  (+2 more)
(+11 files in other folders)
